If on mobile ace editor no longer renders textarea

--- a/app/assets/stylesheets/snippets.scss
+++ b/app/assets/stylesheets/snippets.scss
@@ -12,7 +12,10 @@
 }
 
 .snippet-textarea {
-    display: none;
+    resize: none;
+    display: inline-block;
+    width: 100%;
+
 }
 
 .editable-snippet {
